--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -46,3 +46,20 @@ hr {
   }
 }
 
+/* ページ遷移アニメーション */
+.page {
+  &-enter {
+    opacity: 0;
+    &-active {
+      transition: opacity .5s;
+    }
+  }
+  &-leave {
+    &-to {
+      opacity: 0;
+    }
+    &-active {
+      transition: opacity .5s;
+    }
+  }
+}
